--- a/nonsoAndrew.html
+++ b/nonsoAndrew.html
@@ -20,24 +20,24 @@
   <div class="slideshow-container">
 
           <div class="mySlides fade">
-            <img src="11.png" style="width:100%">
+            <img src="images/11.png" style="width:100%">
             <div class="text"><h1>EXPLORE OUR ROOMS</h1></div>
             <button type="submit" class="button">BOOK NOW</button>
           </div>
 
           <div class="mySlides fade">
-            <img src="11.png" style="width:100%">
+            <img src="images/7.png" style="width:100%">
             <div class="text"><h1>EXPLORE OUR ROOMS</h1></div>
             <button type="submit" class="button">BOOK NOW</button>
           </div>
 
           <div class="mySlides fade">
-            <img src="11.png" style="width:100%">
+            <img src="images/11.png" style="width:100%">
             <div class="text"><h1>EXPLORE OUR ROOMS</h1></div>
             <button type="submit" class="button">BOOK NOW</button>
           </div>
           <div class="mySlides fade">
-            <img src="11.png" style="width:100%">
+            <img src="images/7.png" style="width:100%">
             <div class="text"><h1>EXPLORE OUR ROOMS</h1></div>
             <button type="submit" class="button">BOOK NOW</button>
           </div>
