--- a/nonsoAndrew.html
+++ b/nonsoAndrew.html
@@ -22,24 +22,24 @@
           <div class="mySlides fade">
             <img src="images/11.png" style="width:100%">
             <div class="text"><h1>EXPLORE OUR ROOMS</h1></div>
-            <button type="submit" class="button">BOOK NOW</button>
+            <button type="submit" class="button"><a href="">BOOK NOW</a></button>
           </div>
 
           <div class="mySlides fade">
             <img src="images/7.png" style="width:100%">
             <div class="text"><h1>EXPLORE OUR ROOMS</h1></div>
-            <button type="submit" class="button">BOOK NOW</button>
+            <button type="submit" class="button"><a href="">BOOK NOW</a></button>
           </div>
 
           <div class="mySlides fade">
             <img src="images/11.png" style="width:100%">
             <div class="text"><h1>EXPLORE OUR ROOMS</h1></div>
-            <button type="submit" class="button">BOOK NOW</button>
+            <button type="submit" class="button"><a href="">BOOK NOW</a></button>
           </div>
           <div class="mySlides fade">
             <img src="images/7.png" style="width:100%">
             <div class="text"><h1>EXPLORE OUR ROOMS</h1></div>
-            <button type="submit" class="button">BOOK NOW</button>
+            <button type="submit" class="button"><a href="">BOOK NOW</a></button>
           </div>
           <div class="icon">
             <span class="dot" onclick="currentSlide(1)"></span> 
