--- a/nonsoAndrew.html
+++ b/nonsoAndrew.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="Hng.css">
+    <link rel="stylesheet" type="text/css" href="css/Hng.css">
     <title>Hotel Landing Page</title>
 
 </head>
